# es-hangul-cpp

./: CMakeLists.txt  LICENSE  README.md
benchmark/: CMakeLists.txt  josa.bench.cpp
src/: CMakeLists.txt
src/_internal/: constants.hpp  hangul.cpp  hangul.hpp  utils.cpp  utils.hpp  utils_impl.hpp
src/assemble/: assemble.cpp  assemble.hpp
src/canBe/: canBe.cpp  canBe.hpp
src/combineCharacter/: combineCharacter.cpp  combineCharacter.hpp
src/convertQwertyToAlphabet/: constants.hpp  convertQwertyToAlphabet.cpp  convertQwertyToAlphabet.hpp
src/days/: constants.hpp  days.cpp  days.hpp
src/disassemble/: disassemble.cpp  disassemble.hpp
src/disassembleCompleteCharacter/: disassembleCompleteCharacter.cpp  disassembleCompleteCharacter.hpp
src/getChoseong/: constants.hpp  getChoseong.cpp  getChoseong.hpp
src/hasBatchim/: hasBatchim.cpp  hasBatchim.hpp
src/josa/: josa.cpp  josa.hpp
src/numberToHangul/: numberToHangul.cpp  numberToHangul.hpp
src/numberToHangulMixed/: numberToHangulMixed.cpp  numberToHangulMixed.hpp
src/removeLastCharacter/: removeLastCharacter.cpp  removeLastCharacter.hpp
src/romanize/: constants.hpp  romanize.cpp  romanize.hpp
src/standardPronunciation/: constants.hpp  standardPronunciation.cpp  standardPronunciation.hpp
src/standardPronunciation/rules/: rules.types.hpp  rules.utils.cpp  rules.utils.hpp  transform12th.cpp  transform12th.hpp  transform13And14th.cpp  transform13And14th.hpp  transform16th.cpp  transform16th.hpp  transform17th.cpp  transform17th.hpp  transform18th.cpp  transform18th.hpp  transform19th.cpp  transform19th.hpp  transform20th.cpp  transform20th.hpp  transform9And10And11th.cpp  transform9And10And11th.hpp  transformHardConversion.cpp  transformHardConversion.hpp  transformNLAssimilation.cpp  transformNLAssimilation.hpp
src/susa/: constants.hpp  susa.cpp  susa.hpp
test/: CMakeLists.txt
test/_internal/: hangul.test.cpp  utils.test.cpp
test/assemble/: assemble.test.cpp
test/canBe/: canBe.test.cpp
test/combineCharacter/: combineCharacter.test.cpp
test/convertQwertyToAlphabet/: convertQwertyToAlphabet.test.cpp
test/days/: days.test.cpp
test/disassemble/: disassemble.test.cpp
test/disassembleCompleteCharacter/: disassembleCompleteCharacter.test.cpp
test/getChoseong/: getChoseong.test.cpp
test/hasBatchim/: hasBatchim.test.cpp
test/josa/: josa.test.cpp
test/numberToHangul/: numberToHangul.test.cpp
test/numberToHangulMixed/: numberToHangulMixed.test.cpp
test/removeLastCharacter/: removeLastCharacter.test.cpp
test/romanize/: romanize.test.cpp
test/standardPronunciation/: standardPronunciation.test.cpp
test/standardPronunciation/rules/: transform12th.test.cpp  transform13And14th.test.cpp  transform16th.test.cpp  transform17th.test.cpp  transform18th.test.cpp  transform19th.test.cpp  transform20th.test.cpp  transform9And10And11th.test.cpp  transformHardConversion.test.cpp  transformNLAssimilation.test.cpp
test/susa/: susa.test.cpp
